@@ -1,3 +1,8 @@
+2004-05-26  Jacob Smullyan  <smulloni@smullyan.org>
+
+	* SkunkWeb/Services/psyco_accel.py: simplest possible service that
+	invokes psyco.  Will probably be jazzed up a bit.
+
 2004-05-12  Drew Csillag  <drew_csillag@yahoo.com>
 
 	* SkunkWeb/util/precompile.py.in: now compiles message catalogs too
